@@ -5,6 +5,107 @@
 #include "GameRTTI.h"
 #include "GameScript.h"
 
+#include "utility.h"
+
+
+// Inspired by FOSE's MatchBySlot
+UInt32 GetFormEquipSlotMask(TESForm* form)
+{
+	UInt32 equipSlotMask = 0;  // return value
+	if (IS_TYPE(form, TESObjectWEAP)) {
+		equipSlotMask = TESBipedModelForm::eSlot_Weapon;
+	}
+	else
+	{
+		TESBipedModelForm* pBip = DYNAMIC_CAST(form, TESForm, TESBipedModelForm);
+		if (pBip) 
+			equipSlotMask = pBip->partMask;
+	}
+	return equipSlotMask;
+}
+
+// If any slot bits from slotMask match with the slot bits from the form, returns true.
+bool MatchAnySlotForForm(TESForm* form, UInt32 slotMask)
+{
+	auto const formSlotMask = GetFormEquipSlotMask(form);
+	return (formSlotMask & slotMask) != 0;
+}
+
+bool MatchAnyEquipSlots(UInt32 slotMask1, UInt32 slotMask2)
+{
+	return (slotMask1 & slotMask2) != 0;
+}
+
+EquipDataSet FindEquippedItems(ExtraContainerChanges* contChanges, UInt32 const filterFlags = 0)
+{
+	enum FlagValues {
+		// eSlot_ flags determine which equip slots to include.
+		eSlot_Head =		1 << 0,
+		eSlot_Hair =		1 << 1,
+		eSlot_UpperBody =	1 << 2,
+		eSlot_LeftHand =	1 << 3,
+		eSlot_RightHand =	1 << 4,
+		eSlot_Weapon =		1 << 5,
+		eSlot_PipBoy =		1 << 6,
+		eSlot_Backpack =	1 << 7,
+		eSlot_Necklace =	1 << 8,
+		eSlot_Headband =	1 << 9,
+		eSlot_Hat =			1 << 10,
+		eSlot_Eyeglasses =	1 << 11,
+		eSlot_Nosering =	1 << 12,
+		eSlot_Earrings =	1 << 13,
+		eSlot_Mask =		1 << 14,
+		eSlot_Choker =		1 << 15,
+		eSlot_MouthObject = 1 << 16,
+		eSlot_BodyAddon1 =	1 << 17,
+		eSlot_BodyAddon2 =	1 << 18,
+		eSlot_BodyAddon3 =	1 << 19,
+
+		// iFilter_ flags determine what sort of item to include.
+		iFilter_NoUnplayable =		1 << 20,
+		iFilter_NoQuestItems =		1 << 21,
+		iFilter_NoSlotlessItems =	1 << 22,
+	};
+	bool const skipUnplayable = (filterFlags & iFilter_NoUnplayable) || !filterFlags;
+	bool const noQuestItems = filterFlags & iFilter_NoQuestItems;
+	bool const noSlotlessItems = filterFlags & iFilter_NoSlotlessItems;
+
+	EquipDataSet eqItems;  // Return value.
+	
+	if (contChanges->data && contChanges->data->objList) {
+		for (auto itemIter = contChanges->data->objList->Begin(); !itemIter.End(); ++itemIter)  // see GetHotkeyItem from NVSE for similar loop example.
+		{
+			TESForm* itemForm = itemIter->type;
+			if (!itemForm) continue;
+
+			// Check if the item passes the flag filter checks.
+			if (skipUnplayable && !IsEquipableItemPlayable(itemForm)) continue;
+			if (noQuestItems && itemForm->IsQuestItem()) continue;
+
+			// Slotless items automatically pass the equipSlot filter, unless noSlotlessItems is on.
+			auto const formSlotMask = GetFormEquipSlotMask(itemForm);
+			if (noSlotlessItems && !formSlotMask) continue;
+			
+			// Here, filterFlags is used purely for the first 19 bits it has (equip slot bits).
+			// If it is null, then skip the check (by default, any equip slot forms are allowed).
+			if (formSlotMask && filterFlags && !MatchAnyEquipSlots(formSlotMask, filterFlags)) continue;
+
+			// Form conditions passed, now check if the form is actually equipped.
+			for (auto xDataIter = itemIter->extendData->Begin(); !xDataIter.End(); ++xDataIter)
+			{
+				if (xDataIter->HasType(kExtraData_Worn)) {
+					// If so, add it to the list and go check the next item.
+					EquipData m_found{itemForm, xDataIter.Get()};
+					eqItems.emplace(m_found);
+					break;
+				}
+			}
+		}
+	}
+	return eqItems;
+}
+
+#if 0
 struct GetMatchingEquipped {
 	FormMatcher& m_matcher;
 	EquipData m_found;
@@ -40,7 +141,6 @@ struct GetMatchingEquipped {
 	}
 };
 
-
 EquipData ExtraContainerChanges::FindEquipped(FormMatcher& matcher) const
 {
 	FoundEquipData equipData;
@@ -51,6 +151,7 @@ EquipData ExtraContainerChanges::FindEquipped(FormMatcher& matcher) const
 	}
 	return equipData;
 };
+#endif
 
 STATIC_ASSERT(sizeof(ExtraHealth) == 0x10);
 STATIC_ASSERT(sizeof(ExtraLock) == 0x10);
